@startuml
!include style.puml

package http {

  abstract class DslBaseHttpSampler  {
    String url
  }

  class DslHttpSampler extends DslBaseHttpSampler {
    HttpMethod method
    String body
  }

  class HttpHeaders {
    Map<String, String> headers
  }

  abstract class AutoEnabledHttpConfigElement {
    boolean enabled
  }

  class DslCacheManager extends AutoEnabledHttpConfigElement

  class DslCookieManager extends AutoEnabledHttpConfigElement

  class DslHttpDefaults

  DslBaseHttpSampler --> HttpHeaders

}

package core {
  abstract class BaseConfigElement
  abstract class BaseSampler
}

package codegeneration {
}

DslBaseHttpSampler --|> BaseSampler
HttpHeaders --|> BaseConfigElement
AutoEnabledHttpConfigElement --|> BaseConfigElement
DslHttpDefaults --|> BaseConfigElement
http ..> core
http ..> codegeneration

@enduml